--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "type-racer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://armweb.github.io/type-racer/",
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,6 +40,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.1.4",
+    "gh-pages": "^2.1.1",
     "redux-mock-store": "^1.5.3"
   }
 }
